# ego_sdl_sample

./: .gitmodules  meson.build
src/: game_instance.cpp  game_instance.hpp  main.cpp  sdl_utility.cpp
